<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yichinhsiao.make24.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/time"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/textview_border"
        android:text="@string/defaultTime"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/attempt"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/attempt"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/attempt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/attempt"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/textview_border"
        android:text="@string/number1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/succeeded"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/succeeded"
        android:layout_width="80dp"
        android:layout_height="29dp"
        android:background="@drawable/textview_border"
        android:text="@string/number0"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/skipped"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/succeeded"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/succeeded"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/skipped"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/textview_border"
        android:text="@string/number0"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/expression"
        android:layout_width="342dp"
        android:layout_height="45dp"
        android:background="@drawable/textview_border"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/number1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/orange_bg"
        android:enabled="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/number2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/orange_bg"
        android:enabled="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number1"
        app:layout_constraintEnd_toStartOf="@+id/number3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number1"
        app:layout_constraintTop_toTopOf="@+id/number1"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/number3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/orange_bg"
        android:enabled="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number2"
        app:layout_constraintEnd_toStartOf="@+id/number4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number2"
        app:layout_constraintTop_toTopOf="@+id/number2"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/number4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/orange_bg"
        android:enabled="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/number3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number3"
        app:layout_constraintTop_toTopOf="@+id/number3"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/signPlus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/signMinus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/signMultiple"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtract"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subtract"
        app:layout_constraintTop_toTopOf="@+id/subtract"
        app:layout_constraintVertical_bias="0.701" />

    <Button
        android:id="@+id/divide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/signDivision"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toTopOf="@+id/multiply"
        app:layout_constraintVertical_bias="0.703" />

    <Button
        android:id="@+id/parentheses_left"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/leftBracket"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/parentheses_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/parentheses_right"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/rightBracket"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/parentheses_left"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/parentheses_left"
        app:layout_constraintTop_toTopOf="@+id/parentheses_left"
        app:layout_constraintVertical_bias="0.852" />

    <Button
        android:id="@+id/delete"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:enabled="true"
        android:text="@string/delete"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/parentheses_right"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/parentheses_right"
        app:layout_constraintTop_toTopOf="@+id/parentheses_right"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/done"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/orange_bg"
        android:enabled="false"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/delete"
        app:layout_constraintVertical_bias="0.854" />

</android.support.constraint.ConstraintLayout>
